--- a/_AngularApp.PartLocalAssets.cshtml
+++ b/_AngularApp.PartLocalAssets.cshtml
@@ -4,9 +4,20 @@
   var localDevServer = ngHelper.GetLocalDevServer();
 }
 
-@Html.Raw(ngHelper.GetLocalDevTag())
-<script src="@localDevServer/runtime.js" type="module"></script>
-<script src="@localDevServer/polyfills.js" type="module"></script>
-<script src="@localDevServer/styles.js" type="module"></script>
-<script src="@localDevServer/vendor.js" type="module"></script>
-<script src="@localDevServer/main.js" type="module"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href='https://unpkg.com/@Html.Raw("@")angular/material/prebuilt-themes/indigo-pink.css'>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+
+<div class="mat-typography">
+  @Html.Raw(ngHelper.GetLocalDevTag())
+  <script src="@localDevServer/runtime.js" type="module"></script>
+  <script src="@localDevServer/polyfills.js" type="module"></script>
+  <script src="@localDevServer/styles.js" type="module"></script>
+  <script src="@localDevServer/vendor.js" type="module"></script>
+  <script src="@localDevServer/main.js" type="module"></script>
+</div>
