--- a/_AngularApp.cshtml
+++ b/_AngularApp.cshtml
@@ -15,6 +15,15 @@
   // Create helper to integrate angular best-practice
   var ngHelpers = CreateInstance("shared/Angular.cs");
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+  rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href='@Html.Raw("https://unpkg.com/@angular/material@14.2.6/prebuilt-themes/indigo-pink.css")' rel="stylesheet">
+<link href='@Html.Raw("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css")' rel="stylesheet" >
+
   // Show the Angular either from ng-server (local) or from the compiled live/staging folders
   if(editions.CurrentEdition == "local") {
     @Html.Partial("_AngularApp.PartLocalAssets.cshtml")
