--- a/ng/src/app/filter-options/filter-options.component.html
+++ b/ng/src/app/filter-options/filter-options.component.html
@@ -1,5 +1,7 @@
 
-<div class="mobile">
+
+<!-- Mobile  -->
+<div class=" d-block d-md-none mb-3">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -10,15 +12,17 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
 
-    <app-filter-checkboxes [checkboxGroups]="filterCheckboxes" [titlePrefix]="titlePrefix"></app-filter-checkboxes>
+    <app-filter-checkboxes class="mb-2" [checkboxGroups]="filterCheckboxes" [titlePrefix]="titlePrefix"></app-filter-checkboxes>
 
     <app-filter-selects [selectGroups]="filterSelects" [titlePrefix]="titlePrefix"></app-filter-selects>
 
   </mat-expansion-panel>
 </div>
 
-<div class="desktop">
-  <app-filter-checkboxes [checkboxGroups]="filterCheckboxes" [titlePrefix]="titlePrefix"></app-filter-checkboxes>
+
+<!-- desktop -->
+<div class=" d-none d-md-block mb-3">
+  <app-filter-checkboxes class="mb-2" [checkboxGroups]="filterCheckboxes" [titlePrefix]="titlePrefix"></app-filter-checkboxes>
 
   <app-filter-selects [selectGroups]="filterSelects" [titlePrefix]="titlePrefix"></app-filter-selects>
 </div>
