--- a/ng/src/app/app-list/app-list.component.html
+++ b/ng/src/app/app-list/app-list.component.html
@@ -1,8 +1,8 @@
-
-<mat-card class="mat-elevation-z24">
+<mat-card class="p-0 mb-3">
 
   <ng-container *ngFor="let app of appList | async; last as last; first as first;">
-    <app-list-item [app]="app" class="list-item" [ngClass]="{'last-item': last, 'first-item': first}"></app-list-item>
+    <app-list-item [app]="app"
+      [ngClass]="{'last-item': last, 'first-item': first}"></app-list-item>
   </ng-container>
 
   <ng-container *ngIf="(appList | async)?.length === 0">
