--- a/ng/src/app/app.component.html
+++ b/ng/src/app/app.component.html
@@ -1,11 +1,4 @@
-
-<div class="co-container-outer">
-  <div class="co-container-inner">
-    <app-filter-options></app-filter-options>
-
-    <app-list></app-list>
-  </div>
+<div class="container-fluid">
+  <app-filter-options></app-filter-options>
+  <app-list></app-list>
 </div>
-
-
-
