--- a/ng/src/app/app-list/app-list-item/app-list-item.component.html
+++ b/ng/src/app/app-list/app-list-item/app-list-item.component.html
@@ -1,23 +1,35 @@
+<div class="container-fluid">
 
-<div class="app-image">
-  <img [src]="app?.Icon">
-</div>
+  <div class="row mb-3 pt-3 align-items-center w-100 item d-flex flex-wrap">
 
-<div class="app-description">
-  <h4 class="app-title">
-    <a href="apps/app/{{app?.UrlKey}}">{{app?.Name}}</a>
-    <span
-      class="type"
-      [ngClass]="{'stable': app?.Type?.Id === appTypeIds.stable, 'top': app?.Type?.Id === appTypeIds.top, 'old': app?.Type?.Id === appTypeIds.old}"
-      *ngIf="!!app?.Type?.Title"
-    >{{app?.Type?.Title}}</span>
-    <span class="type new" [ngStyle]="{'margin-left.px': !!app?.Type ? 0 : 10}" *ngIf="app?.IsNew">New</span>
-  </h4>
-  <span [innerHTML]="app?.ShortDescription"></span>
-</div>
+    <!-- Image links -->
+    <div class="col-4 col-md-3 mb-3">
+      <img class="w-100" [src]="app?.Icon">
+    </div>
 
-<div class="app-taggs">
-  <ng-container *ngFor="let Tag of app?.Tags">
-    <span class="tag">{{Tag?.Title}}</span>
-  </ng-container>
+    <!-- Content mitte -->
+    <div class=" col-8 col-md-6 mb-2">
+
+      <h4 class="fs-5 fw-bolder">
+        <a class="text-decoration-none" href="apps/app/{{app?.UrlKey}}">{{app?.Name}}</a>
+        <span class="ms-2 type"
+          [ngClass]="{'stable': app?.Type?.Id === appTypeIds.stable, 'top': app?.Type?.Id === appTypeIds.top, 'old': app?.Type?.Id === appTypeIds.old}"
+          *ngIf="!!app?.Type?.Title">{{app?.Type?.Title}}</span>
+        <span class="type new" [ngStyle]="{'margin-left.px': !!app?.Type ? 0 : 10}" *ngIf="app?.IsNew">New</span>
+      </h4>
+      <span class="fs-6 fw-normal" [innerHTML]="app?.ShortDescription"></span>
+
+    </div>
+
+    <!-- Tags rechts -->
+    <div class="col-12 col-md-4  ">
+      <ng-container *ngFor="let Tag of app?.Tags">
+        <span class="badge bg-secondary tags mb-1">{{Tag?.Title}}</span>
+      </ng-container>
+    </div>
+
+    <!-- streched link -->
+    <a href="apps/app/{{app?.UrlKey}}" class="stretched-link"></a>
+  </div>
+
 </div>
