wip detail list and routing

--- a/ng/src/app/details/details.component.scss
+++ b/ng/src/app/details/details.component.scss
@@ -2,3 +2,9 @@
   box-shadow: 0 3px 30px rgb(0 0 0 / 60%);
   border-radius: 5px;
   }
+
+  .tags {
+    color: #9f9f9f !important;
+    background: #f1f1ee !important;
+    border-radius: 20px;
+  }
