commit with detail

--- a/ng/src/app/app-list/app-list-item/app-list-item.component.html
+++ b/ng/src/app/app-list/app-list-item/app-list-item.component.html
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+  <a routerLink="/details/{{ app.Id }}" class="stretched-link">
+
 
   <div class="row mb-1 pt-3 align-items-center w-100 item d-flex flex-wrap justify-content-center mr-2 ml-2">
 
@@ -29,7 +31,7 @@
     </div>
 
     <!-- streched link -->
-    <a routerLink="/details/{{ app.Id }}" class="stretched-link"></a>
-  </div>
 
+  </div>
+  </a>
 </div>
