--- a/ng/src/app/details/details.component.html
+++ b/ng/src/app/details/details.component.html
@@ -2,40 +2,40 @@
   <ng-container *ngIf="releases$ | async as releases">
 
   <div class="container mb-3 pt-4">
-    <a class="btn btn-primary mb-3 text-white" routerLink="/">Zurück</a>
+    <a class="btn btn-primary mb-3 text-white" [routerLink]="['/']">Zurück</a>
 
     <div class="row">
       <div class="col-8">
         <!-- HEADLINE -->
-        <h2>{{app.Name}}</h2>
+        <h2 class="font-weight-bolder fs-5 ">{{app.Name}}</h2>
 
 
         <!-- EXTERNAL LINKS -->
         <div class="mb-3">
-          <a href="{{ releases.Download }}" target="_blank"class="btn btn-primary  mr-2">Download Latest</a>
-          <a href="{{ app.Github }}" target="_blank" class="btn btn-outline-dark mr-2">GitHub</a>
-          <a *ngIf="app.DemoLink" href="{{ app.DemoLink }}" target="_blank" class="btn btn-outline-dark mr-2">Live
+          <a href="{{ releases.Download }}" target="_blank"class="btn btn-primary  mr-2 mb-1">Download Latest</a>
+          <a href="{{ app.Github }}" target="_blank" class="btn btn-outline-dark mr-2 mb-1">GitHub</a>
+          <a *ngIf="app.DemoLink" href="{{ app.DemoLink }}" target="_blank" class="btn btn-outline-dark mr-2 mb-1">Live
             Demo</a>
-          <a href="#" target="_blank" class="btn btn-outline-dark mr-2">Other Releases</a>
+          <a href="#releases" class="btn btn-outline-dark mr-2 mb-1">Other Releases</a>
         </div>
 
 
         <!-- CONTENT -->
-        <div class="mb-4" [innerHTML]="app.Description"></div>
+        <div class="mb-3" [innerHTML]="app.Description"></div>
 
 
         <!-- Tags -->
-        <div class="mb-2">
+        <div class="mb-3">
           <a *ngFor="let detail of app.Tags"
-            class="badge badge-secondary mr-2 mb-2 fw-light text-decoration-none tags" href="#"
+            class="badge badge-secondary mr-2 mb-1 fw-light text-decoration-none tags" href="#"
             target="_blank">{{ detail.Title }}</a>
         </div>
       </div>
 
 
       <!-- IMAGE -->
-      <div class="col-4">
-        <img class="img-border-shadow img-fluid rounded-start" src="https://2sxc.org{{ app.Icon }}" />
+      <div class="col-4 text-right bg-img">
+        <img class="img-border-shadow img-fluid rounded-start w-50 " src="https://2sxc.org{{ app.Icon }}" />
       </div>
 
 
@@ -68,21 +68,24 @@
 
 
       <!--Detailed Description-->
-      <div *ngIf="app.DescriptionLong" class="mb-3">
-        <h2>Detailed Description</h2>
+      <div *ngIf="app.DescriptionLong" class="mb-3 co-content-detail-description">
+        <h2 class="font-weight-bolder fs-5">Detailed Description</h2>
 
-        <div [innerHTML]="app.DescriptionLong"></div>
+
+        <div class="co-content-detail-description-copy" [innerHTML]="app.DescriptionLong"></div>
+
+
       </div>
 
 
       <!--System Info-->
       <div>
-        <h2>System Info</h2>
+        <h3 class="font-weight-bolder">System Info</h3>
 
-        <div class="card col-12 bg-light mb-4">
+        <div class="card col-12 bg-light mb-3">
           <div class="card-body">
             <p class="card-text">
-              v.{{ app.Version }}
+              v.{{ latestVersion.Version }}
               <br />
               GUID: {{ app.AppGuid }} <br />
               for 2sxc {{ app.Min2sxc }}
@@ -93,9 +96,9 @@
 
 
       <!--Releases End-->
-      <div *ngIf="releases" class="mb-4 col-12">
+      <div *ngIf="releases" class="mb-3 col-12">
 
-        <h2>Releases</h2>
+        <h3 class="font-weight-bolder" id="releases">Releases</h3>
         <ol>
       <div *ngFor="let release of releases" >
           <li> <a href="{{release.Download}}">{{release.Version}}</a>
@@ -107,8 +110,8 @@
     </div>
 
       <!-- Main Version  -->
-      <div class="mb-4 col-12">
-        <h2>All Main Versions Hard coded</h2>
+      <div class="mb-3 col-12">
+        <h3 class="font-weight-bolder">All Main Versions Hard coded</h3>
 
         <div class="col-md-12">
           <ol>
@@ -128,15 +131,15 @@
 
 
       <!-- History -->
-      <div *ngIf="app.History" class="mb-4 col-12">
-        <h2>History</h2>
+      <div *ngIf="app.History" class="mb-3 col-12">
+        <h3 class="font-weight-bolder">History</h3>
         <div [innerHTML]="app.History"></div>
       </div>
 
 
       <!-- Getting started -->
       <div class="mb-2 col-12">
-        <h2>Discover more</h2>
+        <h3 class="font-weight-bolder">Discover more</h3>
         <a class="link-primary text-decoration-none"
           href="https://2sxc.org/en/apps/gettingstarted?AppGuid={{app.AppGuid}}" target="_blank">Getting started</a>
       </div>
@@ -144,7 +147,7 @@
 
       <!-- Created by -->
       <div class="mb-2 col-12">
-        <h2>Created by</h2>
+        <h3 class="font-weight-bolder">Created by</h3>
         <a class="link-primary text-decoration-none" href="https://www.2sic.com/" target="_blank">2sic Internet
           Solutions</a>
       </div>
@@ -154,7 +157,6 @@
   </div>
 </ng-container>
 </ng-container>
-
 
 
 
