--- a/ng/src/app/app-list/app-list-item/app-list-item.component.html
+++ b/ng/src/app/app-list/app-list-item/app-list-item.component.html
@@ -1,36 +1,37 @@
-<div class="container-fluid">
-  <a routerLink="/details/{{ app.Id }}" class="stretched-link">
+<div class="container">
+  <!-- wird verwendet, wenn es über Routing auf die Detail weiter geleitet wird -->
+  <!-- <a routerLink="/details/{{ app.Id }}" class="stretched-link"> -->
+  <a href="https://2sxc.org/apps/app/{{app.UrlKey}}" target="_blank" class="stretched-link">
 
 
-  <div class="row mb-1 pt-3 align-items-center w-100 item d-flex flex-wrap justify-content-center mr-2 ml-2">
+
+  <div class="row mb-1 pt-3 align-items-center w-100 item d-flex flex-wrap justify-content-center mr-1 ml-1">
 
     <!-- Image links -->
-    <div class=" col-6 col-sm-4 col-md-2 mb-3">
-      <img class="w-100 w-sm-75" [src]="app?.Icon">
+    <div class=" col-6 col-sm-4 col-lg-2 mb-3">
+      <img class="img-fluid" [src]="app?.Icon">
     </div>
 
     <!-- Content mitte -->
-    <div class=" col-12 col-sm-8 col-md-6 mb-3">
+    <div class=" col-12 col-sm-8 col-lg-6 mb-3">
 
-      <h4 class="fs-5 fw-bolder">
-        <a class="text-decoration-none" routerLink="/details/{{ app.Id }}">{{app?.Name}}</a>
+      <h4>
+        <a class="text-decoration-none" href="https://2sxc.org/apps/app/{{app.UrlKey}}" target="_blank">{{app?.Name}}</a>
         <span class="ml-2 type"
           [ngClass]="{'stable': app?.Type?.Id === appTypeIds.stable, 'top': app?.Type?.Id === appTypeIds.top, 'old': app?.Type?.Id === appTypeIds.old}"
           *ngIf="!!app?.Type?.Title">{{app?.Type?.Title}}</span>
         <span class="type new" [ngStyle]="{'margin-left.px': !!app?.Type ? 0 : 10}" *ngIf="app?.IsNew">New</span>
       </h4>
-      <span class="fs-6 fw-normal" [innerHTML]="app?.ShortDescription"></span>
+      <span class="short-description" [innerHTML]="app?.ShortDescription"></span>
 
     </div>
 
     <!-- Tags rechts -->
-    <div class="col-12 col-md-4  ">
+    <div class="col-12 col-lg-4  ">
       <ng-container *ngFor="let Tag of app?.Tags">
-        <span class="badge bg-secondary tags mb-2 ml-1">{{Tag?.Title}}</span>
+        <span class="badge bg-secondary tags mb-1 mr-1">{{Tag?.Title}}</span>
       </ng-container>
     </div>
-
-    <!-- streched link -->
 
   </div>
   </a>
