--- a/ng/src/app/app-list/app-list.component.html
+++ b/ng/src/app/app-list/app-list.component.html
@@ -1,13 +1,14 @@
 <mat-card class="p-0 mb-3">
-
-  <ng-container *ngFor="let app of appList | async; last as last; first as first;">
-    <app-list-item [app]="app"
-      [ngClass]="{'last-item': last, 'first-item': first}"></app-list-item>
+  <ng-container
+    *ngFor="let app of appList | async; last as last; first as first"
+  >
+    <app-list-item
+      [app]="app"
+      [ngClass]="{ 'last-item': last, 'first-item': first }"
+    ></app-list-item>
   </ng-container>
 
   <ng-container *ngIf="(appList | async)?.length === 0">
     <p>No Apps for this selection</p>
   </ng-container>
-
-
 </mat-card>
