--- a/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.html
+++ b/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.html
@@ -1,21 +1,26 @@
 <form [formGroup]="checkboxForm">
   <ng-container *ngFor="let checkboxGroup of checkboxGroups | async">
-
-    <div class="d-flex justify-content-between flex-wrap flex-column flex-md-row filter-checkbox-container">
-
-      <mat-checkbox [checked]="!areSomeCheckboxesSelected()" [disabled]="!areSomeCheckboxesSelected()"
-        (change)="showAll($event?.checked)">Show all</mat-checkbox>
+    <div
+      class="d-flex justify-content-between flex-wrap flex-column flex-md-row filter-checkbox-container"
+    >
+      <mat-checkbox
+        [checked]="!areSomeCheckboxesSelected()"
+        [disabled]="!areSomeCheckboxesSelected()"
+        (change)="showAll($event?.checked)"
+        >Show all</mat-checkbox
+      >
 
       <ng-container *ngFor="let option of checkboxGroup?.Options">
-        <ng-container *ngIf="!option">{{option | json}}</ng-container>
-
-
-        <mat-checkbox [formControlName]="option?.Title" [disabled]="option?.Disabled"
-          (change)="toggelCheckbox(option, $event?.checked)" matTooltip="{{option?.Tooltip}}">
-          {{option?.Tag}}
+        <ng-container *ngIf="!option">{{ option | json }}</ng-container>
+        <mat-checkbox
+          [formControlName]="option?.Title"
+          [disabled]="option?.Disabled"
+          (change)="toggelCheckbox(option, $event?.checked)"
+          matTooltip="{{ option?.Tooltip }}"
+        >
+          {{ option?.Tag }}
         </mat-checkbox>
       </ng-container>
-
     </div>
   </ng-container>
 </form>
