--- a/ng/src/app/filter-options/filter-selects/filter-selects.component.html
+++ b/ng/src/app/filter-options/filter-selects/filter-selects.component.html
@@ -19,7 +19,7 @@
               [value]="option"
               (onSelectionChange)="handleFilterSelection($event)"
               [disabled]="option?.Disabled"
-              >{{ option?.Tag }}</mat-option
+              >{{ option?.Title }}</mat-option
             >
           </ng-container>
         </mat-select>
