--- a/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.html
+++ b/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.html
@@ -6,16 +6,15 @@
       <mat-checkbox
         [checked]="!areSomeCheckboxesSelected()"
         [disabled]="!areSomeCheckboxesSelected()"
-        (change)="showAll($event?.checked)"
+        (change)="showAll()"
         >Show all</mat-checkbox
       >
-
       <ng-container *ngFor="let option of checkboxGroup?.Options">
         <ng-container *ngIf="!option">{{ option | json }}</ng-container>
         <mat-checkbox
           [formControlName]="option?.Title"
           [disabled]="option?.Disabled"
-          (change)="toggelCheckbox(option, $event?.checked)"
+          (change)="toggleCheckbox(option, $event?.checked)"
           matTooltip="{{ option?.Tooltip }}"
         >
           {{ option?.Tag }}
