--- a/ng/src/app/filter-options/filter-options.component.html
+++ b/ng/src/app/filter-options/filter-options.component.html
@@ -10,7 +10,7 @@
 
     <app-filter-checkboxes
       class="mb-2"
-      [checkboxGroups]="filterCheckboxes"
+      [checkboxGroups$]="filterCheckboxes"
       [titlePrefix]="titlePrefix"
     ></app-filter-checkboxes>
 
@@ -25,7 +25,7 @@
 <div class="d-none d-md-block mb-3">
   <app-filter-checkboxes
     class="mb-2"
-    [checkboxGroups]="filterCheckboxes"
+    [checkboxGroups$]="filterCheckboxes"
     [titlePrefix]="titlePrefix"
   ></app-filter-checkboxes>
 
