--- a/ng/src/app/app.component.html
+++ b/ng/src/app/app.component.html
@@ -1,9 +1,1 @@
-<!-- !!! wird verwednet, wenn die Detail seite via Angular eingebunden wird, aktuell via Razor, Google Gründe -->
-  <!-- <router-outlet></router-outlet> -->
-
-
-<div class="container">
-  <app-filter-options></app-filter-options>
-  <app-list></app-list>
-</div>
-
+  <router-outlet></router-outlet>
