--- a/ng/src/app/list/list.component.html
+++ b/ng/src/app/list/list.component.html
@@ -1,7 +1,4 @@
-<!-- !!! wird verwendet wenn das Routing aktiv ist  -->
-
-<!--
 <div class="container-fluid">
   <app-filter-options></app-filter-options>
   <app-list></app-list>
-</div> -->
+</div>
